Update title and subtitle for consistency

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI 페어 프로그래밍 완전 가이드 2025</title>
+    <title>AI 페어 프로그래밍 가이드 2025</title>
     
     <link rel="preconnect" href="https://cdn.jsdelivr.net">
     <link href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" rel="stylesheet">
@@ -463,9 +463,9 @@
 
         <main class="main-content">
             <header class="document-header">
-                <h1 class="document-title">AI 페어 프로그래밍 완전 가이드</h1>
+                <h1 class="document-title">AI 페어 프로그래밍 가이드</h1>
                 <p class="document-subtitle">Model, Agent, Pilot - AI 코딩의 3요소와 실전 활용법</p>
-                <div class="document-meta">2025년 11월 22일 최신 업데이트</div>
+                <div class="document-meta">2025년 11월 업데이트 KIM HAKMIN</div>
             </header>
 
             <!-- Section: Trend -->
@@ -481,7 +481,7 @@
                     <p style="font-size: 13px; color: var(--text-muted); margin-top: 12px;">AI 모델 경쟁의 순환 구조</p>
                 </div>
 
-                <p>2025년 11월 하순, AI 업계는 역사상 가장 치열한 경쟁을 벌이고 있습니다. 11월 한 달만 GPT-5.1, Grok 4.1, Gemini 3가 연달아 출시되며 매주 "세계 최고" 타이틀이 바뀌었습니다.</p>
+                <p>2025년 11월, AI 업계는 역사상 가장 치열한 경쟁을 벌이고 있습니다. 11월 한 달만 GPT-5.1, Grok 4.1, Gemini 3가 연달아 출시되며 매주 "세계 최고" 타이틀이 바뀌었습니다.</p>
 
                 <p><strong>11월의 전쟁: AI Autumn 2025</strong></p>
                 <ul>
@@ -2055,7 +2055,7 @@ npx serve
 
                 <div style="text-align: center; margin-top: 60px; padding: 30px 0; border-top: 1px solid var(--border);">
                     <h2 style="font-size: 32px; margin-bottom: 12px; font-weight: 700;">
-                        AI 페어 프로그래밍 완전 가이드
+                        AI 페어 프로그래밍 가이드
                     </h2>
                     <p style="font-size: 15px; color: var(--text-muted);">
                         2025년 11월 22일 최신 업데이트
